// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getErrorDetails Input validation error 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <div
      class="column"
    >
      <h5>
        Errors
      </h5>
      <ul>
        <li>
          #/properties: Property "message" does not match schema.
        </li>
        <li>
          #/properties/message/type: Instance type "object" is invalid. Expected "string", "number", "boolean".
        </li>
      </ul>
    </div>
    <div
      class="column"
    >
      <h5>
        Rendered Args
      </h5>
      <div
        class="root"
      >
        <ul
          style="border: 0px; padding: 0px; margin: 0.5em 0px 0.5em 0.125em; list-style: none; background-color: rgb(255, 255, 255);"
        >
          <li
            style="padding: 0px; margin: 0px;"
          >
            <ul
              style="padding: 0px; margin: 0px; list-style: none;"
            >
              <li
                style="padding-top: 0.25em; padding-right: 0px; margin-left: 0.875em; word-wrap: break-word; padding-left: 1.25em; text-indent: -0.5em; word-break: break-all; white-space: pre-wrap;"
              >
                <label
                  style="display: inline-block; color: rgb(57, 113, 237); margin: 0px 0.5em 0px 0px;"
                >
                  <span>
                    type:
                  </span>
                </label>
                <span
                  style="color: rgb(0, 113, 36);"
                >
                  "info"
                </span>
              </li>
              <li
                style="padding-top: 0.25em; padding-right: 0px; margin-left: 0.875em; word-wrap: break-word; padding-left: 1.25em; text-indent: -0.5em; word-break: break-all; white-space: pre-wrap;"
              >
                <label
                  style="display: inline-block; color: rgb(57, 113, 237); margin: 0px 0.5em 0px 0px;"
                >
                  <span>
                    duration:
                  </span>
                </label>
                <span
                  style="color: rgb(249, 106, 56);"
                >
                  2500
                </span>
              </li>
              <li
                style="position: relative; padding-top: 0.25em; margin-left: 0px; padding-left: 0px;"
              >
                <div
                  style="display: inline-block; padding-right: 0.5em; padding-left: 0px; cursor: pointer;"
                >
                  <div
                    style="margin-left: 0px; transition: 150ms; transform: rotateZ(0deg); transform-origin: 45% 50%; position: relative; line-height: 1.1em; font-size: 0.75em; color: rgb(57, 113, 237);"
                  >
                    ▶
                  </div>
                </div>
                <label
                  style="display: inline-block; color: rgb(57, 113, 237); margin: 0px; padding: 0px; cursor: pointer;"
                >
                  <span>
                    message:
                  </span>
                </label>
                <span
                  style="padding-left: 0.5em; cursor: default; color: rgb(0, 113, 36);"
                >
                  <span>
                    <span
                      style="margin-left: 0.3em; margin-right: 0.3em;"
                    >
                      {}
                    </span>
                     2 keys
                  </span>
                </span>
                <ul
                  style="padding: 0px; margin: 0px; list-style: none; display: block;"
                />
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="column"
    >
      <h5>
        Schema
      </h5>
      <div
        class="root"
      >
        <ul
          style="border: 0px; padding: 0px; margin: 0.5em 0px 0.5em 0.125em; list-style: none; background-color: rgb(255, 255, 255);"
        >
          <li
            style="padding: 0px; margin: 0px;"
          >
            <ul
              style="padding: 0px; margin: 0px; list-style: none;"
            >
              <li
                style="padding-top: 0.25em; padding-right: 0px; margin-left: 0.875em; word-wrap: break-word; padding-left: 1.25em; text-indent: -0.5em; word-break: break-all; white-space: pre-wrap;"
              >
                <label
                  style="display: inline-block; color: rgb(57, 113, 237); margin: 0px 0.5em 0px 0px;"
                >
                  <span>
                    $schema:
                  </span>
                </label>
                <span
                  style="color: rgb(0, 113, 36);"
                >
                  "https://json-schema.org/draft/2019-09/schema#"
                </span>
              </li>
              <li
                style="padding-top: 0.25em; padding-right: 0px; margin-left: 0.875em; word-wrap: break-word; padding-left: 1.25em; text-indent: -0.5em; word-break: break-all; white-space: pre-wrap;"
              >
                <label
                  style="display: inline-block; color: rgb(57, 113, 237); margin: 0px 0.5em 0px 0px;"
                >
                  <span>
                    type:
                  </span>
                </label>
                <span
                  style="color: rgb(0, 113, 36);"
                >
                  "object"
                </span>
              </li>
              <li
                style="position: relative; padding-top: 0.25em; margin-left: 0px; padding-left: 0px;"
              >
                <div
                  style="display: inline-block; padding-right: 0.5em; padding-left: 0px; cursor: pointer;"
                >
                  <div
                    style="margin-left: 0px; transition: 150ms; transform: rotateZ(0deg); transform-origin: 45% 50%; position: relative; line-height: 1.1em; font-size: 0.75em; color: rgb(57, 113, 237);"
                  >
                    ▶
                  </div>
                </div>
                <label
                  style="display: inline-block; color: rgb(57, 113, 237); margin: 0px; padding: 0px; cursor: pointer;"
                >
                  <span>
                    properties:
                  </span>
                </label>
                <span
                  style="padding-left: 0.5em; cursor: default; color: rgb(0, 113, 36);"
                >
                  <span>
                    <span
                      style="margin-left: 0.3em; margin-right: 0.3em;"
                    >
                      {}
                    </span>
                     3 keys
                  </span>
                </span>
                <ul
                  style="padding: 0px; margin: 0px; list-style: none; display: block;"
                />
              </li>
              <li
                style="position: relative; padding-top: 0.25em; margin-left: 0px; padding-left: 0px;"
              >
                <div
                  style="display: inline-block; padding-right: 0.5em; padding-left: 0px; cursor: pointer;"
                >
                  <div
                    style="margin-left: 0px; transition: 150ms; transform: rotateZ(0deg); transform-origin: 45% 50%; position: relative; line-height: 1.1em; font-size: 0.75em; color: rgb(57, 113, 237);"
                  >
                    ▶
                  </div>
                </div>
                <label
                  style="display: inline-block; color: rgb(57, 113, 237); margin: 0px; padding: 0px; cursor: pointer;"
                >
                  <span>
                    required:
                  </span>
                </label>
                <span
                  style="padding-left: 0.5em; cursor: default; color: rgb(0, 113, 36);"
                >
                  <span>
                    <span
                      style="margin-left: 0.3em; margin-right: 0.3em;"
                    >
                      []
                    </span>
                     1 item
                  </span>
                </span>
                <ul
                  style="padding: 0px; margin: 0px; list-style: none; display: block;"
                />
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`getErrorDetails Network error 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <div
      class="column"
    >
      <h5>
        Response
      </h5>
      <div
        class="text-warning"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-exclamation-triangle fa-w-18 "
          data-icon="exclamation-triangle"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 576 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            fill="currentColor"
          />
        </svg>
         PixieBrix does not have permission to access https://fail.com. Contact your IT Administrator for the
        <code>
          runtime_blocked_hosts
        </code>
         Chrome Browser Extension policy.
      </div>
      <div>
        <div>
          PixieBrix did not receive a response. See 
          <a
            href="https://docs.pixiebrix.com/how-to/troubleshooting/troubleshooting-network-errors"
            rel="noreferrer"
            target="_blank"
          >
            Troubleshooting Network Errors
          </a>
        </div>
      </div>
    </div>
    <div
      class="column"
    >
      <h5>
        Request Config
      </h5>
      <div
        class="root"
      >
        <ul
          style="border: 0px; padding: 0px; margin: 0.5em 0px 0.5em 0.125em; list-style: none; background-color: rgb(255, 255, 255);"
        >
          <li
            style="padding: 0px; margin: 0px;"
          >
            <ul
              style="padding: 0px; margin: 0px; list-style: none;"
            >
              <li
                style="position: relative; padding-top: 0.25em; margin-left: 0px; padding-left: 0px;"
              >
                <div
                  style="display: inline-block; padding-right: 0.5em; padding-left: 0px; cursor: pointer;"
                >
                  <div
                    style="margin-left: 0px; transition: 150ms; transform: rotateZ(0deg); transform-origin: 45% 50%; position: relative; line-height: 1.1em; font-size: 0.75em; color: rgb(57, 113, 237);"
                  >
                    ▶
                  </div>
                </div>
                <label
                  style="display: inline-block; color: rgb(57, 113, 237); margin: 0px; padding: 0px; cursor: pointer;"
                >
                  <span>
                    transitional:
                  </span>
                </label>
                <span
                  style="padding-left: 0.5em; cursor: default; color: rgb(0, 113, 36);"
                >
                  <span>
                    <span
                      style="margin-left: 0.3em; margin-right: 0.3em;"
                    >
                      {}
                    </span>
                     3 keys
                  </span>
                </span>
                <ul
                  style="padding: 0px; margin: 0px; list-style: none; display: block;"
                />
              </li>
              <li
                style="position: relative; padding-top: 0.25em; margin-left: 0px; padding-left: 1.125em;"
              >
                <label
                  style="display: inline-block; color: rgb(57, 113, 237); margin: 0px; padding: 0px; cursor: default;"
                >
                  <span>
                    transformRequest:
                  </span>
                </label>
                <span
                  style="padding-left: 0.5em; cursor: default; color: rgb(0, 113, 36);"
                >
                  <span>
                    <span
                      style="margin-left: 0.3em; margin-right: 0.3em;"
                    >
                      []
                    </span>
                     0 items
                  </span>
                </span>
                <ul
                  style="padding: 0px; margin: 0px; list-style: none; display: block;"
                />
              </li>
              <li
                style="position: relative; padding-top: 0.25em; margin-left: 0px; padding-left: 1.125em;"
              >
                <label
                  style="display: inline-block; color: rgb(57, 113, 237); margin: 0px; padding: 0px; cursor: default;"
                >
                  <span>
                    transformResponse:
                  </span>
                </label>
                <span
                  style="padding-left: 0.5em; cursor: default; color: rgb(0, 113, 36);"
                >
                  <span>
                    <span
                      style="margin-left: 0.3em; margin-right: 0.3em;"
                    >
                      []
                    </span>
                     0 items
                  </span>
                </span>
                <ul
                  style="padding: 0px; margin: 0px; list-style: none; display: block;"
                />
              </li>
              <li
                style="padding-top: 0.25em; padding-right: 0px; margin-left: 0.875em; word-wrap: break-word; padding-left: 1.25em; text-indent: -0.5em; word-break: break-all; white-space: pre-wrap;"
              >
                <label
                  style="display: inline-block; color: rgb(57, 113, 237); margin: 0px 0.5em 0px 0px;"
                >
                  <span>
                    timeout:
                  </span>
                </label>
                <span
                  style="color: rgb(249, 106, 56);"
                >
                  0
                </span>
              </li>
              <li
                style="padding-top: 0.25em; padding-right: 0px; margin-left: 0.875em; word-wrap: break-word; padding-left: 1.25em; text-indent: -0.5em; word-break: break-all; white-space: pre-wrap;"
              >
                <label
                  style="display: inline-block; color: rgb(57, 113, 237); margin: 0px 0.5em 0px 0px;"
                >
                  <span>
                    xsrfCookieName:
                  </span>
                </label>
                <span
                  style="color: rgb(0, 113, 36);"
                >
                  "XSRF-TOKEN"
                </span>
              </li>
              <li
                style="padding-top: 0.25em; padding-right: 0px; margin-left: 0.875em; word-wrap: break-word; padding-left: 1.25em; text-indent: -0.5em; word-break: break-all; white-space: pre-wrap;"
              >
                <label
                  style="display: inline-block; color: rgb(57, 113, 237); margin: 0px 0.5em 0px 0px;"
                >
                  <span>
                    xsrfHeaderName:
                  </span>
                </label>
                <span
                  style="color: rgb(0, 113, 36);"
                >
                  "X-XSRF-TOKEN"
                </span>
              </li>
              <li
                style="padding-top: 0.25em; padding-right: 0px; margin-left: 0.875em; word-wrap: break-word; padding-left: 1.25em; text-indent: -0.5em; word-break: break-all; white-space: pre-wrap;"
              >
                <label
                  style="display: inline-block; color: rgb(57, 113, 237); margin: 0px 0.5em 0px 0px;"
                >
                  <span>
                    maxContentLength:
                  </span>
                </label>
                <span
                  style="color: rgb(249, 106, 56);"
                >
                  -1
                </span>
              </li>
              <li
                style="padding-top: 0.25em; padding-right: 0px; margin-left: 0.875em; word-wrap: break-word; padding-left: 1.25em; text-indent: -0.5em; word-break: break-all; white-space: pre-wrap;"
              >
                <label
                  style="display: inline-block; color: rgb(57, 113, 237); margin: 0px 0.5em 0px 0px;"
                >
                  <span>
                    maxBodyLength:
                  </span>
                </label>
                <span
                  style="color: rgb(249, 106, 56);"
                >
                  -1
                </span>
              </li>
              <li
                style="position: relative; padding-top: 0.25em; margin-left: 0px; padding-left: 0px;"
              >
                <div
                  style="display: inline-block; padding-right: 0.5em; padding-left: 0px; cursor: pointer;"
                >
                  <div
                    style="margin-left: 0px; transition: 150ms; transform: rotateZ(0deg); transform-origin: 45% 50%; position: relative; line-height: 1.1em; font-size: 0.75em; color: rgb(57, 113, 237);"
                  >
                    ▶
                  </div>
                </div>
                <label
                  style="display: inline-block; color: rgb(57, 113, 237); margin: 0px; padding: 0px; cursor: pointer;"
                >
                  <span>
                    headers:
                  </span>
                </label>
                <span
                  style="padding-left: 0.5em; cursor: default; color: rgb(0, 113, 36);"
                >
                  <span>
                    <span
                      style="margin-left: 0.3em; margin-right: 0.3em;"
                    >
                      {}
                    </span>
                     1 key
                  </span>
                </span>
                <ul
                  style="padding: 0px; margin: 0px; list-style: none; display: block;"
                />
              </li>
              <li
                style="padding-top: 0.25em; padding-right: 0px; margin-left: 0.875em; word-wrap: break-word; padding-left: 1.25em; text-indent: -0.5em; word-break: break-all; white-space: pre-wrap;"
              >
                <label
                  style="display: inline-block; color: rgb(57, 113, 237); margin: 0px 0.5em 0px 0px;"
                >
                  <span>
                    url:
                  </span>
                </label>
                <span
                  style="color: rgb(0, 113, 36);"
                >
                  "https://fail.com"
                </span>
              </li>
              <li
                style="padding-top: 0.25em; padding-right: 0px; margin-left: 0.875em; word-wrap: break-word; padding-left: 1.25em; text-indent: -0.5em; word-break: break-all; white-space: pre-wrap;"
              >
                <label
                  style="display: inline-block; color: rgb(57, 113, 237); margin: 0px 0.5em 0px 0px;"
                >
                  <span>
                    method:
                  </span>
                </label>
                <span
                  style="color: rgb(0, 113, 36);"
                >
                  "get"
                </span>
              </li>
              <li
                style="padding-top: 0.25em; padding-right: 0px; margin-left: 0.875em; word-wrap: break-word; padding-left: 1.25em; text-indent: -0.5em; word-break: break-all; white-space: pre-wrap;"
              >
                <label
                  style="display: inline-block; color: rgb(57, 113, 237); margin: 0px 0.5em 0px 0px;"
                >
                  <span>
                    data:
                  </span>
                </label>
                <span
                  style="color: rgb(180, 24, 63);"
                >
                  undefined
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`getErrorDetails RemoteApiErrorDetail 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <div
      class="column"
    >
      <h5>
        Response from Remote API
      </h5>
      <div>
        Status: 400 — Bad Request
      </div>
      <div
        class="root"
      >
        <ul
          style="border: 0px; padding: 0px; margin: 0.5em 0px 0.5em 0.125em; list-style: none; background-color: rgb(255, 255, 255);"
        >
          <li
            style="padding: 0px; margin: 0px;"
          >
            <ul
              style="padding: 0px; margin: 0px; list-style: none;"
            >
              <li
                style="position: relative; padding-top: 0.25em; margin-left: 0px; padding-left: 0px;"
              >
                <div
                  style="display: inline-block; padding-right: 0.5em; padding-left: 0px; cursor: pointer;"
                >
                  <div
                    style="margin-left: 0px; transition: 150ms; transform: rotateZ(0deg); transform-origin: 45% 50%; position: relative; line-height: 1.1em; font-size: 0.75em; color: rgb(57, 113, 237);"
                  >
                    ▶
                  </div>
                </div>
                <label
                  style="display: inline-block; color: rgb(57, 113, 237); margin: 0px; padding: 0px; cursor: pointer;"
                >
                  <span>
                    data:
                  </span>
                </label>
                <span
                  style="padding-left: 0.5em; cursor: default; color: rgb(0, 113, 36);"
                >
                  <span>
                    <span
                      style="margin-left: 0.3em; margin-right: 0.3em;"
                    >
                      {}
                    </span>
                     1 key
                  </span>
                </span>
                <ul
                  style="padding: 0px; margin: 0px; list-style: none; display: block;"
                />
              </li>
              <li
                style="padding-top: 0.25em; padding-right: 0px; margin-left: 0.875em; word-wrap: break-word; padding-left: 1.25em; text-indent: -0.5em; word-break: break-all; white-space: pre-wrap;"
              >
                <label
                  style="display: inline-block; color: rgb(57, 113, 237); margin: 0px 0.5em 0px 0px;"
                >
                  <span>
                    status:
                  </span>
                </label>
                <span
                  style="color: rgb(249, 106, 56);"
                >
                  400
                </span>
              </li>
              <li
                style="padding-top: 0.25em; padding-right: 0px; margin-left: 0.875em; word-wrap: break-word; padding-left: 1.25em; text-indent: -0.5em; word-break: break-all; white-space: pre-wrap;"
              >
                <label
                  style="display: inline-block; color: rgb(57, 113, 237); margin: 0px 0.5em 0px 0px;"
                >
                  <span>
                    statusText:
                  </span>
                </label>
                <span
                  style="color: rgb(0, 113, 36);"
                >
                  "Bad Request"
                </span>
              </li>
            </ul>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`getErrorDetails Template render error 1`] = `
<DocumentFragment>
  <div>
    <span>
      (unknown path) [Line 1, Column 3]
  parseAggregate: expected colon after dict key
    </span>
  </div>
</DocumentFragment>
`;
